# nullain-agent

./: .env.example  .gitignore  LICENSE  README.md  mcp.config.example.json  pyproject.toml
.circleci/: config.yml
.github/workflows/: ci.yml
dashboard/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css
dashboard/src/components/: Field.tsx  Layout.tsx  NeuralGlobe.tsx  Panel.tsx
dashboard/src/pages/: Brain.tsx  Chat.tsx  Integrations.tsx  Logs.tsx  Memory.tsx  Metrics.tsx  Skills.tsx  Tokens.tsx
scripts/: bench_latency.py  minimal_mcp_server.py
skills/echo/: SKILL.md  handler.py
skills/note/: SKILL.md  handler.py
skills/research-brief/: SKILL.md
src/nullain/: __init__.py  agent.py  brain.py  cli_helpers.py  config.py  core_agent.py  doctor.py  embeddings.py  env_tokens.py  history.py  llm.py  main.py  mcp_client.py  mcp_config_store.py  memory.py  persona.py  runtime.py  server.py  voice_session.py  workspace.py
src/nullain/coding/: __init__.py  harness.py
src/nullain/loop/: __init__.py  engine.py
src/nullain/squads/: roles.py  (+2 more)
tests/: test_agent_isolation.py  test_api_auth.py  test_confirmation_timeout.py  test_doctor.py  test_embeddings_memory.py  test_fail_closed.py  test_files_jail.py  test_history.py  test_llm_retry.py  test_mcp_confirmation_policy.py  test_mcp_fail_closed.py  test_p1_runtime.py  test_p2_skills_squads.py  test_p3_loop_coding_sandbox.py  test_parse_arguments.py  test_qualification.py  test_runtime.py  test_spinner.py  test_tempfile_safety.py  test_ws_origin.py
(+13 files in other folders)
