[project]
name = "nullain"
version = "0.1.0"
description = "NULLAIN — assistente pessoal de Netty"
readme = "README.md"
authors = [
    { name = "Nettin", email = "ngdigitalsuporte@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "agents-are-thinking>=0.1.0",
    "fastapi>=0.128.0",
    "faster-whisper>=1.1.0",
    "litellm>=1.91.0",
    "mcp>=1.27,<2",
    "numpy>=2.0.0",
    "piper-tts>=1.4.0",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.20",
    "rich>=15.0.0",
    "sounddevice>=0.5.0",
    "soundfile>=0.13.0",
    "typer>=0.26.8",
    "uvicorn[standard]>=0.50.0",
]

[project.scripts]
nullain = "nullain.main:app"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"
